change image and animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="content">
-    <img src="https://nilay078.github.io/images/nil_profile.jpg"/>
+    <img src="https://images.filmibeat.com/webp/wallpapers/desktop/2023/12/tripti-dimri_1.jpg"/>
 </div>
 
 <canvas></canvas>
